Becloudsmart-OutlookApp/Becloudsmart-OutlookAppWeb/AppRead/Home/css/Home.css
/* Page-specific styling */

@font-face {
    font-family: "SPO365Icons";
    src: url('../fonts/office/office365icons.eot');
    src: url('../fonts/office/office365icons.eot?#iefix') format('embedded-opentype'), 
         url('../fonts/office/office365icons.woff') format('woff'), 
         url('../fonts/office/office365icons.ttf') format('truetype'), 
         url('../fonts/office/office365icons.svg#web') format('svg');
    font-style: normal;
    font-weight: normal;
}

#details 
{
    margin-left: 15px;
}

#details th 
{
    text-align: left;
    padding-right: 10px;
}

#from 
{
    cursor: pointer;
    color: #336699;
}

#from:focus, #from:hover, #from:active 
{
    color: #4ea2df;
}

body
{
    color: #fff;
}

div.options
{
    position: absolute;
    left: 95%;
    color: #595A5C;
}

div.icons 
{
    font-family: SPO365Icons;
    font-size: 1.2em;
    height: 6%;
    padding: 9px;
    text-align: center;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-bottom-color: #535456;
}

.icons.selected
{
    background: #fff;
    color: #595A5C;
}

.expandedIcons
{
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    padding-left: 7px;

}

div.icons:hover
{
    cursor: pointer;
    cursor: hand;
    opacity: 0.65;
}

.main
{
    width: 100%;
    height: 100%;
}

.top
{
    height: 6%;
    padding: 9px;
    position: relative;
    background: #e8e8e8;

}

.left
{
    float: left;
    width: 3%;
    height: 100%;
    background: #595A5C;
    color: #fff;
}

.right
{
    float: right;
    width: 97%;
    height: 100%;
    background: #f5f5f5;
}

.bigbox
{
    text-align: center;
    color: #595A5C;
    background: linear-gradient(#fff, #f8f8f8);
    width: 17%;
    height: 25%;
    margin-right: 5%;
    margin-top: 0.8%;
    position: relative;
    left: 12px;
    display: inline-block;
}

.client
{
    color: #595A5C;
    margin-top: 1%;
    margin-left: 1%

}

.tickbox
{
    color: #595A5C;
    margin-top: 1%;
    margin-left: 1%
}

.settings
{
    color: #595A5C;
    background: #f1f1f1;
    width: 20%;
    height: 30%;
    position: relative;
    top: 25%;
    left: 12px

}

.faq
{
    display: block;
    color: #595A5C;
    background: #fff;
    width: 20%;
    height: 30%;
    position: relative;
    top: 2%;
    left: 12px
}

.support
{
    display: block;
    color: #595A5C;
    background: #f1f1f1;
    width: 20%;
    height: 30%;
    position: relative;
    top: 30%;
    left: 12px
}

.task
{
    position: absolute;
    margin-top: 5%;

}

.buttons
{
    font-family: SPO365Icons;
    font-size: 1.2em;

}

.buttons:hover
{
    cursor: pointer;
    opacity: 0.7;
}

.info
{
    display: block;
    background: #fff;
    float: right;
    margin-right: 2%;
    padding-left: 10px;
    padding-bottom: 5px;
    height: 200px;
    width: 25%;
}

.time
{
    font-size: 1.25em;
}

.time:hover
{
    cursor: pointer;
    opacity: 0.8;
}

.info-block
{
    outline: 1px solid black;
    display: block;
    height: 50px;
}

@import url(https://fonts.googleapis.com/css?family=Lato:400,700);

body 
{
  font-family: 'Lato';
}

.heading-primary 
{
  font-size: 2em;
  padding: 2em;
  text-align: center;
}

.accordion dl,
.accordion-list 
{
  border: 1px solid #ddd;
}
.accordion dl:after,
.accordion-list:after 
{
  content: "";
  display: block;
  width: 100%;
  background-color: #2ba659;
}

.accordion dd,
.accordion__panel 
{
  background-color: #eee;
  font-size: 1em;
}

.accordion p 
{
}

.accordion 
{
  position: relative;
  background-color: #eee;
}

.container 
{
  max-width: 960px;
  margin: 0 auto;
}

.accordionTitle,
.accordion__Heading 
{
  background-color: #9CA9A1;
  text-align: center;
  font-weight: 600;
  padding: 1.5em;
  display: block;
  text-decoration: none;
  color: #fff;
  -webkit-transition: background-color 0.5s ease-in-out;
  transition: background-color 0.5s ease-in-out;
  border-bottom: 1px solid #9CA9A1;
}

.accordionTitle:before,
.accordion__Heading:before 
{
  content: "+";
  font-size: 1.5em;
  line-height: 0.5em;
  float: right;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
}

.accordionTitle:hover,
.accordion__Heading:hover 
{
  opacity: 0.8;
}

.accordionTitleActive,
.accordionTitle.is-expanded 
{
  opacity: 0.8;
}

.accordionTitleActive:before,
.accordionTitle.is-expanded:before 
{
  -webkit-transform: rotate(-225deg);
          transform: rotate(-225deg);
}

.accordionItem 
{
  height: auto;
  overflow: hidden;
  max-height: 50em;
  -webkit-transition: max-height 1s;
  transition: max-height 1s;
}

@media screen and (min-width: 48em) 
{
  .accordionItem 
  {
    max-height: 15em;
    -webkit-transition: max-height 0.5s;
    transition: max-height 0.5s;
  }
}

.accordionItem.is-collapsed 
{
  max-height: 0;
}

.no-js .accordionItem.is-collapsed 
{
  max-height: auto;
}

.animateIn 
{
  -webkit-animation: accordionIn 0.45s normal ease-in-out both 1;
          animation: accordionIn 0.45s normal ease-in-out both 1;
}

.animateOut 
{
  -webkit-animation: accordionOut 0.45s alternate ease-in-out both 1;
          animation: accordionOut 0.45s alternate ease-in-out both 1;
}

@-webkit-keyframes accordionIn 
{
  0% 
  {
    opacity: 0;
    -webkit-transform: scale(0.9) rotateX(-60deg);
            transform: scale(0.9) rotateX(-60deg);
    -webkit-transform-origin: 50% 0;
            transform-origin: 50% 0;
  }
  100% 
  {
    opacity: 1;
    -webkit-transform: scale(1);
            transform: scale(1);
  }
}

@keyframes accordionIn 
{
  0% 
  {
    opacity: 0;
    -webkit-transform: scale(0.9) rotateX(-60deg);
            transform: scale(0.9) rotateX(-60deg);
    -webkit-transform-origin: 50% 0;
            transform-origin: 50% 0;
  }
  100% 
  {
    opacity: 1;
    -webkit-transform: scale(1);
            transform: scale(1);
  }
}

@-webkit-keyframes accordionOut 
{
  0% 
  {
    opacity: 1;
    -webkit-transform: scale(1);
            transform: scale(1);
  }
  100% 
  {
    opacity: 0;
    -webkit-transform: scale(0.9) rotateX(-60deg);
            transform: scale(0.9) rotateX(-60deg);
  }
}

@keyframes accordionOut 
{
  0% 
  {
    opacity: 1;
    -webkit-transform: scale(1);
            transform: scale(1);
  }
  100% 
  {
    opacity: 0;
    -webkit-transform: scale(0.9) rotateX(-60deg);
            transform: scale(0.9) rotateX(-60deg);
  }
}

